2005-04-19  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/PedView.py: Replaced gnome canvas by an implementation
	that uses gtk+ only. Still incomplete.
	* src/gramps_main.py: Removed canvas specific calls of the PedView

	* src/GrampsDbBase.py (create_id): Use sys.maxint to get the maximum possible integer number 
	* GenericFilter.py: Don't crash on corrupt database

2005-04-18  Don Allingham  <don@gramps-project.org>
	* src/edit_person.glade: re-add edit_person.glade
	* src/EditPerson.py: start of new EditPerson dialog
	* src/ListModel.py: enhancements for the start of inline editing
	* src/Makefile.am: add edit_person.glade
	* src/ReadXML.py: commit transactions properly
	* src/const.py.in: add edit_person.glade back in

2005-04-17  Don Allingham  <don@gramps-project.org>
	* src/GrampsBSDDB.py: actually perform the commits during the
	transaction_commit task, instead of the commit_* tasks
	* src/GrampsInMem.py: actually perform the commits during the
	transaction_commit task, instead of the commit_* tasks
	* src/GrampsDbBase.py: actually perform the commits during the
	transaction_commit task, instead of the commit_* tasks

2005-04-17  Eero Tamminen  <eerot@sf>
        * src/gramps.glade: Fix typo
	* src/GenericFilter.py: Fix typo
	* src/ReportUtils.py: Fix typos

2005-04-15  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/WebPage.py (dump_gendex): Files are named by GRAMPS ID;
	Alway print fields for birth/death; Fixed typo in DateHandler

2005-04-14  Don Allingham  <don@gramps-project.org>
	* src/plugins/Check.py: loop through family relationships until all
	problems are resolved
	* src/FamilyView.py: make load_family more robust to signals

2005-04-14  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/gramps_main.py (undo): Dont emit "database-changed"
	* src/plugins/plugins/TestcaseGenerator.py: Added option to generate
	a new transaction for every change on the database. Useful for UNDO
	and signal testing.
	